--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ thiserror = "1.0"
 async-trait = "0.1"
 libloading = "0.8"
 tokio = { version = "1.35", features = ["sync"] }
+serde = { version = "1", features = ["derive"] }
